--- a/CodeMask/CodeMask.Windows/CodeMask.Windows.csproj
+++ b/CodeMask/CodeMask.Windows/CodeMask.Windows.csproj
@@ -41,6 +41,9 @@
   <ItemGroup>
     <Compile Include="Design\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ServicesFactory.cs" />
+    <Compile Include="Services\IServicesFactory.cs" />
+    <Compile Include="Services\ServiceProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
