--- a/CodeMask/CodeMask.Extensions/CodeMask.Extensions.csproj
+++ b/CodeMask/CodeMask.Extensions/CodeMask.Extensions.csproj
@@ -39,6 +39,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System.Collections.Generic.IDictionary[TKey, TValue]\IDictionary[TKey, TValue].HasValues.cs" />
+    <Compile Include="System.Collections.Generic.IEnumerable[T]\IEnumerable[T].ForEach.cs" />
+    <Compile Include="System.Collections.Generic.IEnumerable[T]\IEnumerable[T].HasValue.cs" />
+    <Compile Include="System.EventHandler\EventHandler.RaiseEvent.cs" />
+    <Compile Include="System.String\String.ParseTo.cs" />
+    <Compile Include="System.String\String.Split.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
