--- a/CodeMask/CodeMask.Windows.Extensions/CodeMask.Windows.Extensions.csproj
+++ b/CodeMask/CodeMask.Windows.Extensions/CodeMask.Windows.Extensions.csproj
@@ -36,6 +36,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MarkupExtensions\ImageBrushExtension.cs" />
+    <Compile Include="MarkupExtensions\ImageSourceExtension.cs" />
     <Compile Include="System.Windows.DependencyObject\DependencyObject.GetAncestors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="System.Windows.DependencyObject\DependencyObject.FindParent.cs" />
