--- a/CodeMask/CodeMask.WPF.Controls/CodeMask.WPF.Controls.csproj
+++ b/CodeMask/CodeMask.WPF.Controls/CodeMask.WPF.Controls.csproj
@@ -57,7 +57,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageStrip.cs" />
     <Compile Include="Panels\StackPanelWithSpacing.cs" />
+    <Compile Include="Panels\StretchWrapPanel.cs" />
     <Compile Include="Panels\UniformGridWithSpacing.cs" />
     <Compile Include="Panels\UniformWrapPanel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
