增加核心异常类CoreException

--- a/CodeMask/CodeMask.Windows/CodeMask.Windows.csproj
+++ b/CodeMask/CodeMask.Windows/CodeMask.Windows.csproj
@@ -39,6 +39,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CoreException.cs" />
     <Compile Include="Design\Singleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServicesFactory.cs" />
