--- a/CodeMask/CodeMask.Extensions/CodeMask.Extensions.csproj
+++ b/CodeMask/CodeMask.Extensions/CodeMask.Extensions.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System.Collections.Generic.ICollection[T]\ICollection.AddRange.cs" />
     <Compile Include="System.Collections.Generic.IDictionary[TKey, TValue]\IDictionary[TKey, TValue].HasValues.cs" />
     <Compile Include="System.Collections.Generic.IEnumerable[T]\IEnumerable[T].ForEach.cs" />
     <Compile Include="System.Collections.Generic.IEnumerable[T]\IEnumerable[T].HasValue.cs" />
