--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\SimpleCommand.cs" />
+    <Compile Include="Extensions\System.Windows.Window\Window.GetHwndSource.cs" />
+    <Compile Include="Extensions\System.Windows.Window\Window.RegisterHook.cs" />
+    <Compile Include="Extensions\System.Windows.Window\Window.GetHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
