--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -50,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\SimpleCommand.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.WpfToGdi.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.GdiToWpf.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.Invert.cs" />
     <Compile Include="Extensions\System.Windows.Window\Window.GetHwndSource.cs" />
     <Compile Include="Extensions\System.Windows.Window\Window.RegisterHook.cs" />
     <Compile Include="Extensions\System.Windows.Window\Window.GetHandle.cs" />
