--- a/CodeMask/CodeMask.WPF.Extensions/CodeMask.WPF.Extensions.csproj
+++ b/CodeMask/CodeMask.WPF.Extensions/CodeMask.WPF.Extensions.csproj
@@ -65,6 +65,8 @@
     </Compile>
     <Compile Include="System.Windows.DependencyObject\DependencyObject.FindParent.cs" />
     <Compile Include="System.Windows.DependencyObject\DependencyObject.GetAncestors.cs" />
+    <Compile Include="System.Windows.DependencyProperty\DependencyProperty.CloneMetadata.cs" />
+    <Compile Include="System.Windows.FrameworkPropertyMetadata\FrameworkPropertyMetadata.Clone.cs" />
     <Compile Include="System.Windows.Media.Color\Color.GdiToWpf.cs" />
     <Compile Include="System.Windows.Media.Color\Color.Invert.cs" />
     <Compile Include="System.Windows.Media.Color\Color.ToBrush.cs" />
@@ -72,6 +74,7 @@
     <Compile Include="System.Windows.Media.Media3D.Point3D\Point3D.ToVector3D.cs" />
     <Compile Include="System.Windows.Media.Media3D.Vector3D\Vector3D.FindAnyPerpendicular.cs" />
     <Compile Include="System.Windows.Media.Media3D.Vector3D\Vector3D.ToPoint3D.cs" />
+    <Compile Include="System.Windows.Vector\VectorExtensions.cs" />
     <Compile Include="System.Windows.Window\Window.GetHandle.cs" />
     <Compile Include="System.Windows.Window\Window.GetHwndSource.cs" />
     <Compile Include="System.Windows.Window\Window.RegisterHook.cs" />
