添加转换器核心类CoreConverter以及LowerConverter，TrimConverter，UpperConverter；

--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -51,6 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\SimpleCommand.cs" />
+    <Compile Include="Converters\CoreConverter.cs" />
+    <Compile Include="Converters\LowerConverter.cs" />
+    <Compile Include="Converters\TrimConverter.cs" />
+    <Compile Include="Converters\UpperConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -73,9 +77,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Converters\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
