--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -52,7 +52,9 @@
   <ItemGroup>
     <Compile Include="Commands\SimpleCommand.cs" />
     <Compile Include="Converters\CoreConverter.cs" />
+    <Compile Include="Converters\BooleanToInverseVisibilityConverter.cs" />
     <Compile Include="Converters\LowerConverter.cs" />
+    <Compile Include="Converters\NotConverter.cs" />
     <Compile Include="Converters\TrimConverter.cs" />
     <Compile Include="Converters\UpperConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
