--- a/CodeMask/CodeMask.UWP/CodeMask.UWP.csproj
+++ b/CodeMask/CodeMask.UWP/CodeMask.UWP.csproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <Reference Include="System.Xaml">
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Xaml.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
