--- a/CodeMask/ThemeTest/ThemeTest.csproj
+++ b/CodeMask/ThemeTest/ThemeTest.csproj
@@ -29,6 +29,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,6 +40,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -60,12 +62,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CalloutShapeDemo.xaml.cs">
+      <DependentUpon>CalloutShapeDemo.xaml</DependentUpon>
+    </Compile>
     <Compile Include="DragDockPanelDemo.xaml.cs">
       <DependentUpon>DragDockPanelDemo.xaml</DependentUpon>
     </Compile>
     <Compile Include="TreeListViewDemo.xaml.cs">
       <DependentUpon>TreeListViewDemo.xaml</DependentUpon>
     </Compile>
+    <Page Include="CalloutShapeDemo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="DataGridDemo.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
