--- a/CodeMask/CodeMask.WPF.Controls/CodeMask.WPF.Controls.csproj
+++ b/CodeMask/CodeMask.WPF.Controls/CodeMask.WPF.Controls.csproj
@@ -162,6 +162,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="TreeListView.cs" />
+    <Compile Include="Utils\CalloutShape.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
