--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Converters\NotConverter.cs" />
     <Compile Include="Converters\TrimConverter.cs" />
     <Compile Include="Converters\UpperConverter.cs" />
+    <Compile Include="MarkupExtensions\ImageBrushExtension.cs" />
+    <Compile Include="MarkupExtensions\ImageSourceExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
