--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -62,6 +62,21 @@
     <Compile Include="Converters\NotConverter.cs" />
     <Compile Include="Converters\TrimConverter.cs" />
     <Compile Include="Converters\UpperConverter.cs" />
+    <Compile Include="Extensions\System.Windows.DependencyObject\DependencyObject.FindParent.cs" />
+    <Compile Include="Extensions\System.Windows.DependencyObject\DependencyObject.GetAncestors.cs" />
+    <Compile Include="Extensions\System.Windows.DependencyProperty\DependencyProperty.CloneMetadata.cs" />
+    <Compile Include="Extensions\System.Windows.FrameworkPropertyMetadata\FrameworkPropertyMetadata.Clone.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.GdiToWpf.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.Invert.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.ToBrush.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Color\Color.WpfToGdi.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Media3D.Point3D\Point3D.ToVector3D.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Media3D.Vector3D\Vector3D.FindAnyPerpendicular.cs" />
+    <Compile Include="Extensions\System.Windows.Media.Media3D.Vector3D\Vector3D.ToPoint3D.cs" />
+    <Compile Include="Extensions\System.Windows.Vector\VectorExtensions.cs" />
+    <Compile Include="Extensions\System.Windows.Window\Window.GetHandle.cs" />
+    <Compile Include="Extensions\System.Windows.Window\Window.GetHwndSource.cs" />
+    <Compile Include="Extensions\System.Windows.Window\Window.RegisterHook.cs" />
     <Compile Include="MarkupExtensions\ImageBrushExtension.cs" />
     <Compile Include="MarkupExtensions\ImageSourceExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
