--- a/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
+++ b/CodeMask/CodeMask.WPF/CodeMask.WPF.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Commands\SimpleCommand.cs" />
     <Compile Include="Commands\WeakEventHandlerManager.cs" />
+    <Compile Include="Converters\CaseConverter.cs" />
     <Compile Include="Converters\CoreConverter.cs" />
     <Compile Include="Converters\BooleanToInverseVisibilityConverter.cs" />
     <Compile Include="Converters\IsNullConverter.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Extensions\System.Windows.Window\Window.GetHandle.cs" />
     <Compile Include="Extensions\System.Windows.Window\Window.GetHwndSource.cs" />
     <Compile Include="Extensions\System.Windows.Window\Window.RegisterHook.cs" />
+    <Compile Include="MarkupExtensions\CaseConverterExtension.cs" />
     <Compile Include="MarkupExtensions\ImageBrushExtension.cs" />
     <Compile Include="MarkupExtensions\ImageSourceExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
